load("@aspect_rules_py//py:defs.bzl", "py_library")
load("@tavern_pip//:requirements.bzl", "requirement")

py_library(
    name = "tavern",
    srcs = [
        "__init__.py",
        "core.py",
        "entry.py",
        "helpers.py",
        "request.py",
        "response.py",
    ],
    imports = [".."],
    visibility = ["//:__subpackages__"],
    deps = [
        "//tavern/_core",
        "//tavern/_core/pytest",
        "//tavern/_core/schema",
        "@tavern_pip//jmespath",
        "@tavern_pip//pyjwt",
        "@tavern_pip//pytest",
        "@tavern_pip//python_box",
        "@tavern_pip//requests",
    ],
)
