load("@tavern_pip//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "conftest",
    srcs = ["conftest.py"],
    data = [":logging.yaml"],
    imports = [".."],
    visibility = ["//visibility:public"],
    deps = [
        "@tavern_pip_pytest//:pkg",
        "@tavern_pip_pyyaml//:pkg",
    ],
)

load("@com_github_ali5h_rules_pip//:defs.bzl", "py_pytest_test")

py_pytest_test(
    name = "test_doctest",
    args = [
        "-c",
        "pytest.ini",
        "--color",
        "yes",
        "--doctest-modules",
    ],
    data = ["//:pytest.ini"],
    deps = [
        "//tavern",
        "//tests/unit:conftest",
    ],
)

load("@io_bazel_rules_docker//container:bundle.bzl", "container_bundle")

container_bundle(
    name = "test_image_bundle",
    images = {
        "taverntesting.github.io/integration-test-containers:example-advanced": "//example/advanced:server_image",
        "taverntesting.github.io/integration-test-containers:example-components": "//example/components:server_image",
        "taverntesting.github.io/integration-test-containers:integration": "//tests/integration:server_image",
    },
)
