load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "conftest",
    srcs = ["conftest.py"],
    data = [":logging.yaml"],
    imports = [".."],
    visibility = ["//visibility:public"],
    deps = [
        "@tavern_pip_pytest//:pkg",
        "@tavern_pip_pyyaml//:pkg",
    ],
)

load("//tavern/bazelutil:tavern_test.bzl", "pytest_test")

pytest_test(
    name = "test_doctest",
    args = [
        "-c",
        "pytest.ini",
        "--color",
        "yes",
        "--doctest-modules",
    ],
    data = ["//:pytest.ini"],
    deps = [
        "//tavern",
        "//tests/unit:conftest",
    ],
)

load("@io_bazel_rules_docker//container:bundle.bzl", "container_bundle")

container_bundle(
    name = "test_image_bundle",
    images = {
        "taverntesting.github.io/integration-test-containers:example-advanced": "//example/advanced:server_image",
        "taverntesting.github.io/integration-test-containers:example-components": "//example/components:server_image",
        "taverntesting.github.io/integration-test-containers:example-cookies": "//example/cookies:server_image",
        "taverntesting.github.io/integration-test-containers:example-hooks": "//example/hooks:server_image",
        "taverntesting.github.io/integration-test-containers:example-simple": "//example/simple:server_image",
        "taverntesting.github.io/integration-test-containers:example-remember": "//example/remember:server_image",
        "taverntesting.github.io/integration-test-containers:example-mqtt-server": "//example/mqtt:server_image",
        "taverntesting.github.io/integration-test-containers:example-mqtt-listener": "//example/mqtt:listener_image",
        "taverntesting.github.io/integration-test-containers:example-mqtt-fluentd": "//example/mqtt:fluentd",
        "taverntesting.github.io/integration-test-containers:example-mqtt-mosquitto": "//example/mqtt:mosquitto",
        "taverntesting.github.io/integration-test-containers:integration": "//tests/integration:server_image",
    },
)
