load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "testing_utils",
    srcs = [
        ":testing_utils.py",
    ],
    deps = [
        "@tavern_pip_flask//:pkg",
        "@tavern_pip_pyjwt//:pkg",
    ],
)

load("//tavern/bazelutil:tavern_test.bzl", "tavern_test")

tavern_test(
    "test_server.tavern.yaml",
    extra_data = [
        ":common.yaml",
    ],
    extra_deps = [
        ":testing_utils",
    ],
    image = ":server_image.tar",
    port = 5000,
)

load("@io_bazel_rules_docker//python3:image.bzl", "py3_image")

py3_image(
    name = "server_image",
    srcs = [":server.py"],
    base = "//tavern/bazelutil:py3_base_image",
    main = ":server.py",
    visibility = ["//:__subpackages__"],
    deps = [
        "@tavern_pip_flask//:pkg",
        "@tavern_pip_pyjwt//:pkg",
    ],
)
