load("@rules_python//python:defs.bzl", "py_library")
load("@tavern_pip//:requirements.bzl", "requirement")

py_library(
    name = "testing_utils",
    srcs = [
        ":testing_utils.py",
    ],
    deps = [
        requirement("flask"),
        requirement("pyjwt"),
    ],
)

load("//bazel:tavern_test.bzl", "tavern_test")

tavern_test(
    "test_server.tavern.yaml",
    extra_data = [
        ":common.yaml",
    ],
    extra_deps = [
        ":testing_utils",
    ],
    images = {"example-advanced": ":server_image"},
)

load("//bazel:images.bzl", "py_oci_image")

py_oci_image(
    name = "server_image",
    srcs = [":server.py"],
    base = "//bazel:py3_base_image",
    main = ":server.py",
    visibility = ["//:__subpackages__"],
    deps = [
        requirement("flask"),
        requirement("pyjwt"),
    ],
)
