load("@rules_python//python:defs.bzl", "py_library")
load("//bazel:tavern_test.bzl", "tavern_test")
load("@tavern_pip//:requirements.bzl", "requirement")

[
    tavern_test(
        filename,
        extra_data = [
            ":common.yaml",
            "//example/components/components:auth_stage.yaml",
        ],
        images = {"example-components": ":server_image.tar"},
    )
    for filename in [
        "test_ping.tavern.yaml",
        "test_hello.tavern.yaml",
    ]
]

load("//bazel:images.bzl", "py_oci_image")

py_oci_image(
    name = "server_image",
    srcs = [":server.py"],
    base = "//bazel:py3_base_image",
    main = ":server.py",
    visibility = ["//:__subpackages__"],
    deps = [
        requirement("flask"),
        requirement("pyjwt"),
    ],
)
