load("@tavern_pip//:requirements.bzl", "requirement")
load("//bazel:images.bzl", "py_oci_image")
load("//bazel:tavern_test.bzl", "tavern_test")

tavern_test(
    "test_server.tavern.yaml",
    extra_data = [
        ":common.yaml",
    ],
    images = {"example-cookies": ":server_image"},
)

py_oci_image(
    name = "server_image",
    srcs = [":server.py"],
    base = "//bazel:py3_base_image",
    main = ":server.py",
    visibility = ["//:__subpackages__"],
    deps = [
        requirement("flask"),
    ],
)
