[project]
name = "my_tavern_plugin"
version = "0.1.0"
description = "A custom 'generic' plugin for tavern that touches files and checks if they are created."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.entry-points.tavern_file]
my_tavern_plugin = "my_tavern_plugin.plugin"