load("@rules_python//python:defs.bzl", "py_library")
load("@tavern_pip//:requirements.bzl", "requirement")

py_library(
    name = "conftest",
    srcs = [
        ":conftest.py",
    ],
)

load("//bazel:tavern_test.bzl", "tavern_test")

#tavern_test(
#    "test_server.tavern.yaml",
#    extra_data = [
#        # Minor hack to make it so the tests are rerun when the server changes
#        ":server_image",
#    ],
#    extra_deps = [
#        ":conftest",
#    ],
#)

load("//bazel:images.bzl", "py_oci_image")

py_oci_image(
    name = "server_image",
    srcs = [":server.py"],
    base = "//bazel:py3_base_image",
    main = ":server.py",
    visibility = ["//:__subpackages__"],
    deps = [
        requirement("flask"),
        requirement("pyjwt"),
    ],
)
