load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "conftest",
    srcs = [
        ":conftest.py",
    ],
    deps = [
        "@tavern_pip_fluent_logger//:pkg",
    ],
)

py_library(
    name = "testing_utils",
    srcs = [
        ":testing_utils.py",
    ],
)

load("//tavern/bazelutil:tavern_test.bzl", "tavern_test")

tavern_test(
    "test_mqtt.tavern.yaml",
    extra_data = [
        ":common.yaml",
    ],
    extra_deps = [
        ":conftest",
        ":testing_utils",
    ],
    image = ":server_image.tar",
    port = 5002,
)

tavern_test(
    "test_mqtt_failures.tavern.yaml",
    extra_data = [
        ":common.yaml",
    ],
    extra_deps = [
        ":conftest",
        ":testing_utils",
    ],
    image = ":server_image.tar",
    port = 5002,
)

load("@io_bazel_rules_docker//python3:image.bzl", "py3_image")

py3_image(
    name = "server_image",
    srcs = [":server.py"],
    base = "//tavern/bazelutil:py3_base_image",
    main = ":server.py",
    visibility = ["//:__subpackages__"],
    deps = [
        "@tavern_pip_flask//:pkg",
        "@tavern_pip_fluent_logger//:pkg",
        "@tavern_pip_paho_mqtt//:pkg",
        "@tavern_pip_pyyaml//:pkg",
    ],
)

py3_image(
    name = "listener_image",
    srcs = [":listener.py"],
    base = "//tavern/bazelutil:py3_base_image",
    main = ":listener.py",
    visibility = ["//:__subpackages__"],
    deps = [
        "@tavern_pip_fluent_logger//:pkg",
        "@tavern_pip_paho_mqtt//:pkg",
        "@tavern_pip_pyyaml//:pkg",
    ],
)

load("@io_bazel_rules_docker//container:image.bzl", "container_image")

container_image(
    name = "mosquitto",
    base = "@mosquitto//image",
    directory = "/mosquitto/config",
    files = [":mosquitto.conf"],
    visibility = ["//:__subpackages__"],
)

container_image(
    name = "fluentd",
    base = "@fluentd//image",
    directory = "/fluentd/etc",
    files = [":fluent.conf"],
    visibility = ["//:__subpackages__"],
)
