load("//bazel:tavern_test.bzl", "tavern_test")
load("@tavern_pip//:requirements.bzl", "requirement")

#tavern_test(
#    "test_server.tavern.yaml",
#    extra_data = [
#        # Minor hack to make it so the tests are rerun when the server changes
#        ":server_image.tar",
#    ],
#)

load("//bazel:images.bzl", "py_oci_image")

py_oci_image(
    name = "server_image",
    srcs = [":server.py"],
    base = "//bazel:py3_base_image",
    main = ":server.py",
    visibility = ["//:__subpackages__"],
    deps = [
        requirement("flask"),
    ],
)
