filegroup(
    name = "all_rules",
    srcs = glob(["**/*.bzl"]),
    visibility = ["//visibility:public"],
)

load("@rules_foreign_cc//foreign_cc:configure.bzl", "configure_make")

SHARED_LIBS = [
    "python3.8/lib-dynload/_asyncio.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_bisect.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_blake2.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_bz2.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_codecs_cn.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_codecs_hk.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_codecs_iso2022.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_codecs_jp.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_codecs_kr.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_codecs_tw.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_contextvars.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_crypt.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_csv.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_ctypes.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_ctypes_test.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_curses.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_curses_panel.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_datetime.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_dbm.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_decimal.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_elementtree.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_gdbm.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_hashlib.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_heapq.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_json.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_lsprof.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_lzma.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_md5.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_multibytecodec.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_multiprocessing.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_opcode.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_pickle.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_posixshmem.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_posixsubprocess.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_queue.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_random.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_sha1.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_sha256.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_sha3.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_sha512.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_socket.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_sqlite3.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_ssl.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_statistics.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_struct.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_testbuffer.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_testcapi.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_testimportmultiple.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_testinternalcapi.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_testmultiphase.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_uuid.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_xxsubinterpreters.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_xxtestfuzz.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/_zoneinfo.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/array.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/audioop.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/binascii.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/cmath.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/fcntl.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/grp.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/math.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/mmap.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/nis.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/ossaudiodev.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/parser.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/pyexpat.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/readline.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/resource.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/select.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/spwd.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/syslog.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/termios.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/unicodedata.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/xxlimited.cpython-38-x86_64-linux-gnu.so",
    "python3.8/lib-dynload/zlib.cpython-38-x86_64-linux-gnu.so",
]

configure_make(
    name = "python_built",
    args = [
        "-j",
        "10",
        "altinstall",
    ],
    configure_options = [
        # Runs a load of extra tests that we don't care about
        # "--enable-optimizations",
        # Fixes bug (?) in CFLAGS definition
        "CFLAGS='-Dredacted=\"redacted\"'",
    ],
    install_prefix = "bazel_install",
    lib_source = "@python_src//:sources",
    out_binaries = ["python3.8"],
    out_shared_libs = SHARED_LIBS,
    out_static_libs = ["libpython3.8.a"],
)

genrule(
    name = "python_interpreter",
    srcs = [":python_built"],
    outs = ["python3"],
    cmd = "cp `ls $(locations :python_built) | grep bin/python3.8$$` $(@)",
    executable = True,
)

load("@rules_python//python:defs.bzl", "py_runtime_pair")

py_runtime(
    name = "tavern_py3_runtime",
    files = ["@python_src//:libs"] + SHARED_LIBS,
    interpreter = ":python_interpreter",
    python_version = "PY3",
)

py_runtime_pair(
    name = "tavern_py_runtime_pair",
    py2_runtime = None,
    py3_runtime = ":tavern_py3_runtime",
)

toolchain(
    name = "py3_toolchain",
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    toolchain = ":tavern_py_runtime_pair",
    toolchain_type = "@rules_python//python:toolchain_type",
)

load(":python_sdk.bzl", "python_create_sdk")

python_create_sdk(
    name = "hello",
    deps = [
        #        ":python_built",
        ":tavern_py3_runtime",
        ":python_interpreter",
    ],
)
