load("@rules_python//python:defs.bzl", "py_library")
load("@tavern_pip//:requirements.bzl", "requirement")

py_library(
    name = "_core",
    srcs = [
        "__init__.py",
        "dict_util.py",
        "exceptions.py",
        "extfunctions.py",
        "formatted_str.py",
        "general.py",
        "jmesutils.py",
        "loader.py",
        "plugins.py",
        "report.py",
        "run.py",
        "stage_lines.py",
        "strict_util.py",
        "strtobool.py",
        "testhelpers.py",
        "tincture.py",
    ],
    imports = ["../.."],
    visibility = ["//:__subpackages__"],
    deps = [
        # FIXME: This keeps getting added - why?
        # "//tavern",
        requirement("allure_python_commons"),
        requirement("jmespath"),
        requirement("pytest"),
        requirement("python_box"),
        requirement("pyyaml"),
        requirement("stevedore"),
    ],
)

# gazelle:python_ignore_dependencies tavern._core.schema.files
# gazelle:python_ignore_dependencies tavern._core.pytest
# gazelle:python_ignore_dependencies tavern._core.pytest.error
# gazelle:python_ignore_dependencies tavern._core.pytest.config
# gazelle:python_ignore_dependencies tavern
