load("@aspect_rules_py//py:defs.bzl", "py_library")
load("@tavern_pip//:requirements.bzl", "requirement")

py_library(
    name = "_core",
    srcs = [
        "__init__.py",
        "dict_util.py",
        "exceptions.py",
        "extfunctions.py",
        "formatted_str.py",
        "general.py",
        "jmesutils.py",
        "loader.py",
        "plugins.py",
        "report.py",
        "run.py",
        "stage_lines.py",
        "strict_util.py",
        "strtobool.py",
        "testhelpers.py",
        "tincture.py",
    ],
    imports = ["../.."],
    visibility = ["//:__subpackages__"],
    deps = [
        "//tavern",
        "@tavern_pip//allure_python_commons",
        "@tavern_pip//jmespath",
        "@tavern_pip//pytest",
        "@tavern_pip//python_box",
        "@tavern_pip//pyyaml",
        "@tavern_pip//stevedore",
    ],
)

# gazelle:python_ignore_dependencies tavern._core.schema.files
# gazelle:python_ignore_dependencies tavern._core.pytest
# gazelle:python_ignore_dependencies tavern._core.pytest.error
# gazelle:python_ignore_dependencies tavern._core.pytest.config
# gazelle:python_ignore_dependencies tavern
