load("@rules_python//python:defs.bzl", "py_library")
load("@io_bazel_rules_docker//container:image.bzl", "container_image")

container_image(
    name = "py3_base_image",
    base = "@py3_debug_image_base//image",
    env = {
        "PYTHONUNBUFFERED": "0",
        "FLASK_DEBUG": "1",
    },
    visibility = ["//:__subpackages__"],
)

exports_files([
    "integration_main.py",
    "pytest_main.py",
])

py_library(
    name = "bazelutil",
    srcs = [
        "__init__.py",
        "bazel.py",
    ],
    imports = [".."],
    visibility = ["//:__subpackages__"],
    deps = ["@tavern_pip_stevedore//:pkg"],
)

# gazelle:python_ignore_files integration_main.py
# gazelle:python_ignore_dependencies tavern._plugins.rest.tavernhook, tavern._plugins.mqtt, tavern

py_binary(
    name = "load_image",
    srcs = [":load_image.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "@tavern_pip_docker//:pkg",
    ],
)
