load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "internal",
    srcs = [
        "__init__.py",
        "testutil.py",
    ],
    imports = [".."],
    visibility = ["//:__subpackages__"],
    deps = [
        "//tavern",
        "//tavern/_plugins/mqtt",
        "//tavern/_plugins/rest",
        "@tavern_pip_stevedore//:pkg",
    ],
)
