load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "schemas",
    srcs = [
        "__init__.py",
        "extensions.py",
        "files.py",
    ],
    imports = ["../.."],
    visibility = ["//:__subpackages__"],
    deps = [
        "//tavern/util",
        "@tavern_pip//pypi__pykwalify",
        "@tavern_pip//pypi__pyyaml",
    ],
)
