load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "schemas",
    srcs = [
        "__init__.py",
        "extensions.py",
        "files.py",
    ],
    data = [":tests.schema.yaml"],
    imports = ["../.."],
    visibility = ["//:__subpackages__"],
    deps = [
        "//tavern/util",
        "@tavern_pip_pykwalify//:pkg",
        "@tavern_pip_pyyaml//:pkg",
    ],
)
