load("@rules_python//python:defs.bzl", "py_library")

# Ignore this file as Gazelle keeps adding a import on //tavern which then breaks tests due to circular dependency
# gazelle:ignore

py_library(
    name = "schemas",
    srcs = [
        "__init__.py",
        "extensions.py",
        "files.py",
    ],
    data = [":tests.schema.yaml"],
    imports = ["../.."],
    visibility = ["//:__subpackages__"],
    deps = [
        "//tavern/util",
        "@tavern_pip_pykwalify//:pkg",
        "@tavern_pip_pyyaml//:pkg",
    ],
)
