load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "testutils",
    srcs = [
        "__init__.py",
        "helpers.py",
        "jmesutils.py",
    ],
    imports = ["../.."],
    visibility = ["//:__subpackages__"],
    deps = [
        "//tavern/schemas",
        "//tavern/util",
        "@tavern_pip_jmespath//:pkg",
        "@tavern_pip_pyjwt//:pkg",
        "@tavern_pip_python_box//:pkg",
    ],
)
