load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "util",
    srcs = [
        "__init__.py",
        "delay.py",
        "dict_util.py",
        "exceptions.py",
        "extfunctions.py",
        "formatted_str.py",
        "general.py",
        "jmespath_util.py",
        "loader.py",
        "report.py",
        "retry.py",
        "stage_lines.py",
        "strict_util.py",
    ],
    imports = ["../.."],
    visibility = ["//:__subpackages__"],
    deps = [
        "@tavern_pip//pypi__allure_python_commons",
        "@tavern_pip//pypi__attrs",
        "@tavern_pip//pypi__jmespath",
        "@tavern_pip//pypi__pytest",
        "@tavern_pip//pypi__python_box",
        "@tavern_pip//pypi__pyyaml",
    ],
)
