package(default_visibility = ["//:__subpackages__"])

load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_library(
    name = "conftest",
    testonly = True,
    srcs = ["conftest.py"],
    imports = ["../.."],
    visibility = ["//:__subpackages__"],
    deps = ["@tavern_pip//pytest"],
)

load(":gentest.bzl", "gentest")

[
    gentest(f)
    for f in glob(["test_*.tavern.yaml"])
]

load("@io_bazel_rules_docker//python3:image.bzl", "py3_image")

py3_image(
    name = "server_image",
    srcs = [":server.py"],
    base = "//bazel:py3_base_image",
    main = ":server.py",
    visibility = ["//:__subpackages__"],
    deps = [
        "@tavern_pip_flask//:pkg",
        "@tavern_pip_pyjwt//:pkg",
    ],
)

py_library(
    name = "integration",
    srcs = [
        "ext_functions.py",
        "server.py",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        "@tavern_pip//flask",
        "@tavern_pip//itsdangerous",
        "@tavern_pip//pyjwt",
    ],
)

py_test(
    name = "test_dummy",
    srcs = ["test_dummy.py"],
    deps = [":conftest"],
)
