package(default_visibility = ["//:__subpackages__"])

load("@tavern_pip//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_library(
    name = "conftest",
    testonly = True,
    srcs = ["conftest.py"],
    imports = ["../.."],
    visibility = ["//:__subpackages__"],
    deps = [requirement("pytest")],
)

load(":gentest.bzl", "gentest")

[
    gentest(f)
    for f in glob(["test_*.tavern.yaml"])
]

load("//bazel:images.bzl", "py_oci_image")

py_oci_image(
    name = "server_image",
    srcs = [":server.py"],
    base = "//bazel:py3_base_image",
    main = ":server.py",
    visibility = ["//:__subpackages__"],
    deps = [
        requirement("flask"),
        requirement("pyjwt"),
    ],
)

py_library(
    name = "integration",
    srcs = [
        "ext_functions.py",
        "server.py",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        requirement("flask"),
        requirement("itsdangerous"),
        requirement("pyjwt"),
    ],
)

py_test(
    name = "test_dummy",
    srcs = ["test_dummy.py"],
    deps = [":conftest"],
)
