load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_library", "py_test")
load("@tavern_pip//:requirements.bzl", "requirement")
load("//bazel:images.bzl", "py_oci_image")
load(":gentest.bzl", "gentest")

package(default_visibility = ["//:__subpackages__"])

py_library(
    name = "conftest",
    testonly = True,
    srcs = ["conftest.py"],
    imports = ["../.."],
    visibility = ["//:__subpackages__"],
    deps = ["@tavern_pip//pytest"],
)

[
    gentest(f)
    for f in glob(["test_*.tavern.yaml"])
]

py_oci_image(
    name = "server_image",
    srcs = [":server.py"],
    base = "//bazel:py3_base_image",
    main = ":server.py",
    visibility = ["//:__subpackages__"],
    deps = [
        requirement("flask"),
        requirement("pyjwt"),
    ],
)

py_library(
    name = "integration",
    srcs = [
        "ext_functions.py",
        "server.py",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        "@tavern_pip//flask",
        "@tavern_pip//itsdangerous",
        "@tavern_pip//pyjwt",
    ],
)

py_test(
    name = "test_dummy",
    srcs = ["test_dummy.py"],
    deps = [":conftest"],
)

py_binary(
    name = "server",
    srcs = ["server.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "@tavern_pip//flask",
        "@tavern_pip//itsdangerous",
        "@tavern_pip//pyjwt",
    ],
)
